ref: CommentServiceImpl, EwmExceptionHandler